fix: standardize errors and externalize public config